build: change ReProver to forked repo for committing pyproject.toml

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ReProver"]
 	path = ReProver
-	url = https://github.com/lean-dojo/ReProver
+	url = git@github.com:GerbenKoopman/ReProver.git
