--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ReProver"]
-	path = ReProver
+[submodule "reprover"]
+	path = reprover
 	url = git@github.com:GerbenKoopman/ReProver.git
