fix: update submodule and import paths to use consistent casing for ReProver

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "reprover"]
-	path = reprover
+[submodule "ReProver"]
+	path = ReProver
 	url = git@github.com:GerbenKoopman/ReProver.git
