--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ repos:
     rev: 7.0.0
     hooks:
       - id: flake8
-        args: ["--max-line-length=88", "--ignore=E501,W503"]
+        args: ["--max-line-length=88", "--ignore=E501,W503,E203"]
 
   # 4. Mypy (Type Checker for Pylance-like attribute warnings)
   # Essential for catching issues like the "Cannot access attribute...".
