chore: update mypy configuration to include all Python files for type checking

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,12 +1,12 @@
 [mypy]
-files = *.py
+files = .
 python_version = 3.10
 warn_return_any = True
 warn_unused_configs = True
 implicit_reexport = True
 disallow_untyped_calls = False
 ignore_missing_imports = False
-
+check_untyped_defs = True
 
 [mypy-tokenizers.*]
 ignore_missing_imports = True
