--- a/mypy.ini
+++ b/mypy.ini
@@ -16,3 +16,6 @@ ignore_missing_imports = True
 
 [mypy-rank_bm25.*]
 ignore_missing_imports = True
+
+[mypy-deepspeed.*]
+ignore_missing_imports = True
