feat: add types-setuptools and cython to dependencies in environment.yaml and pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,9 @@ dependencies = [
     "openai",
     "pre-commit",
     "autoflake",
-    "types-tqdm"
+    "types-tqdm",
+    "types-setuptools",
+    "cython",
 ]
 
 [tool.setuptools]
