fix: add missing mypy configuration for google package

--- a/mypy.ini
+++ b/mypy.ini
@@ -19,3 +19,6 @@ ignore_missing_imports = True
 
 [mypy-deepspeed.*]
 ignore_missing_imports = True
+
+[mypy-google.*]
+ignore_missing_imports = True
