--- a/mypy.ini
+++ b/mypy.ini
@@ -7,6 +7,7 @@ implicit_reexport = True
 disallow_untyped_calls = False
 ignore_missing_imports = False
 check_untyped_defs = True
+namespace_packages = True
 
 [mypy-tokenizers.*]
 ignore_missing_imports = True
@@ -21,4 +22,7 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-google.*]
+ignore_missing_imports = True
+
+[mypy-google]
 ignore_missing_imports = True
