--- a/mypy.ini
+++ b/mypy.ini
@@ -8,6 +8,8 @@ disallow_untyped_calls = False
 ignore_missing_imports = False
 check_untyped_defs = True
 namespace_packages = True
+incremental = False
+cache_dir = /dev/null
 
 [mypy-tokenizers.*]
 ignore_missing_imports = True
